<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>opennars</groupId>
        <artifactId>opennars</artifactId>
        <version>1.7-SNAPSHOT</version>
    </parent>
    <artifactId>opennars-core</artifactId>
    <packaging>jar</packaging>

    <name>OpenNARS Core</name>
    <url>https://github.com/opennars/opennars</url>


    <scm>
        <connection>scm:git:${project.url}.git</connection>
        <developerConnection>scm:git:${project.url}.git</developerConnection>
        <url>${project.url}</url>
        <tag>HEAD</tag>
    </scm>

    <build>
        <finalName>opennars_core_${project.version}</finalName>
        <plugins>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <skipTests>true</skipTests>
                </configuration>
            </plugin>

            <!-- Order is important ! Execution follows the declaration order -->

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.2</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                    <!--<useIncrementalCompilation>true</useIncrementalCompilation>-->
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.16</version>
                <!--<configuration>
                    <parallel>classes</parallel>
                    <threadCount>1</threadCount>
                </configuration>-->
            </plugin>

            <!--<plugin>-->
                <!--&lt;!&ndash; https://github.com/chrischristo/capsule-maven-plugin &ndash;&gt;-->
                <!--<groupId>com.github.chrischristo</groupId>-->
                <!--<artifactId>capsule-maven-plugin</artifactId>-->
                <!--<version>0.10.1</version>-->
                <!--<configuration>-->
                    <!--<appClass>nars.core.NARRun</appClass>-->
                    <!--<manifest>-->
                        <!--<entry>-->
                            <!--<key>Min-Java-Version</key>-->
                            <!--<value>1.8.0</value>-->
                        <!--</entry>-->
                    <!--</manifest>-->
                    <!--&lt;!&ndash;-->
                    <!--<fileSets>-->
                        <!--<fileSet>-->
                            <!--<directory>../nal/</directory>-->
                            <!--<outputDirectory>nal/</outputDirectory>-->
                            <!--<includes>-->
                                <!--<include>*</include>-->
                            <!--</includes>-->
                        <!--</fileSet>-->
                    <!--</fileSets>-->
                    <!--&ndash;&gt;-->
                <!--</configuration>-->
                <!--<executions>-->
                    <!--<execution>-->
                        <!--<goals>-->
                            <!--<goal>build</goal>-->
                        <!--</goals>-->
                    <!--</execution>-->
                <!--</executions>-->
            <!--</plugin>-->


            <!--<plugin>-->
                <!--<groupId>org.apache.maven.plugins</groupId>-->
                <!--<artifactId>maven-shade-plugin</artifactId>-->
                <!--<version>2.4</version>-->
                <!--<executions>-->
                    <!--<execution>-->
                        <!--<phase>package</phase>-->
                        <!--<goals>-->
                            <!--<goal>shade</goal>-->
                        <!--</goals>-->
                            <!--<configuration>-->
                                <!--<transformers>-->
                                    <!--<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">-->
                                        <!--<mainClass>nars.run.NARRun</mainClass>-->
                                    <!--</transformer>-->
                                <!--</transformers>-->
                                <!--<minimizeJar>true</minimizeJar>-->
                                <!--<artifactSet>-->
                                    <!--<excludes>-->
                                        <!--&lt;!&ndash;-->
                                        <!--<exclude>classworlds:classworlds</exclude>-->
                                        <!--<exclude>junit:junit</exclude>-->
                                        <!--<exclude>jmock:*</exclude>-->
                                        <!--<exclude>*:xml-apis</exclude>-->
                                        <!--<exclude>org.apache.maven:lib:tests</exclude>-->
                                        <!--<exclude>log4j:log4j:jar:</exclude>-->
                                        <!--&ndash;&gt;-->
                                    <!--</excludes>-->
                                <!--</artifactSet>-->
                            <!--</configuration>-->
                    <!--</execution>-->
                <!--</executions>-->
            <!--</plugin>-->


            <!-- Proguard SOMEWHAT WORKING -->
                    <!--<plugin>-->
                        <!--<groupId>com.github.wvengen</groupId>-->
                        <!--<artifactId>proguard-maven-plugin</artifactId>-->
                        <!--<executions>-->
                            <!--<execution>-->
                                <!--<phase>package</phase>-->
                                <!--<goals><goal>proguard</goal></goals>-->
                            <!--</execution>-->
                        <!--</executions>-->
                        <!--<configuration>-->
                            <!--<obfuscate>true</obfuscate>-->
                            <!--&lt;!&ndash;<injar>${project.build.finalName}${project.build.finalName}-capsule-fat.jar</injar>&ndash;&gt;-->
                            <!--<injar>${project.build.finalName}.jar</injar>-->
                            <!--<outjar>${project.build.finalName}-small.jar</outjar>-->
                            <!--<outputDirectory>${project.build.directory}</outputDirectory>-->
                            <!--<proguardInclude>${basedir}/proguard.conf</proguardInclude>-->
                            <!--<includeDependency>true</includeDependency>-->
                            <!--<includeDependencyInjar>true</includeDependencyInjar>-->
                            <!--<libs>-->
                                <!--<lib>${java.home}/lib/rt.jar</lib>-->
                                <!--<lib>${java.home}/lib/jsse.jar</lib>-->
                            <!--</libs>-->
                        <!--</configuration>-->
                    <!--</plugin>-->



            <!--<plugin>-->
                <!--<groupId>net.ju-n.maven.plugins</groupId>-->
                <!--<artifactId>soot-maven-plugin</artifactId>-->
                <!--<version>0.1.1</version>-->
                <!--&lt;!&ndash; http://nicoulaj.github.io/soot-maven-plugin/soot-mojo.html &ndash;&gt;-->
                <!--<configuration>-->
                    <!--<debug>true</debug>-->

                    <!--<sootClasspath>${java.class.path}:${java.home}/jre/lib:${java.home}/lib:${project.build.outputDirectory}</sootClasspath>-->
                    <!--<applicationMode>true</applicationMode>-->
                    <!--<wholeProgram>true</wholeProgram>-->
                    <!--&lt;!&ndash;<prependClasspath>-->
                        <!--target/classes-->
                    <!--</prependClasspath>&ndash;&gt;-->
                    <!--<mainClass>nars.core.NARRun</mainClass>-->
                    <!--&lt;!&ndash;<interactiveMode>true</interactiveMode>&ndash;&gt;-->
                    <!--&lt;!&ndash; put your configurations here &ndash;&gt;-->
                <!--</configuration>-->
            <!--</plugin>-->

            <!-- mvn org.pitest:pitest-maven:mutationCoverage -->
            <!--<plugin>
                <groupId>org.pitest</groupId>
                <artifactId>pitest-maven</artifactId>
                <version>LATEST</version>
                <configuration>
                    <targetClasses>
                        <param>nars.build.**</param>
                        <param>nars.core.**</param>
                        <param>nars.control.**</param>
                        <param>nars.event.**</param>
                        <param>nars.io.**</param>
                        <param>nars.logic.**</param>
                        <param>nars.operate**</param>
                        <param>nars.util.**</param>
                    </targetClasses>
                    <targetTests>
                        <param>nars.*</param>
                    </targetTests>
                </configuration>

            </plugin>-->
            <!--<plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>2.2-beta-5</version>
                <configuration>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                    <archive>
                        <manifest>
                            <mainClass>nars.core.NARRun</mainClass>
                        </manifest>
                    </archive>
                </configuration>
                <executions>
                    <execution>
                        <id>make-assembly</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin> -->


        </plugins>


    </build>

    <reporting>
        <plugins>
            <!--
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>jdepend-maven-plugin</artifactId>
                <version>2.0</version>
            </plugin>
            -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>cobertura-maven-plugin</artifactId>
                <version>2.6</version>
            </plugin>
        </plugins>
    </reporting>


    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>


    <dependencies>

        <dependency>
            <groupId>opennars</groupId>
            <artifactId>opennars-util</artifactId>
            <version>1.7-SNAPSHOT</version>
        </dependency>

        <dependency>
            <groupId>com.github.fge</groupId>
            <artifactId>grappa</artifactId>
            <version>2.0.0-beta.4</version>
        </dependency>

        <dependency>
            <groupId>org.apache.bcel</groupId>
            <artifactId>bcel</artifactId>
            <version>5.2</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>

    </dependencies>
  
  
  
</project>

